--- a/main.css
+++ b/main.css
@@ -2,6 +2,10 @@ img.Clinton {
 width: 100px;
 height: 100px;
 }
+img.Clinton01 {
+    width: 100px;
+    height: 100px;
+    }
 img.Network01 {
     width: 500px;
     height: 400px;
