--- a/main.css
+++ b/main.css
@@ -32,3 +32,4 @@ img.CommitsClinton {
 @media screen and (max-width: 768px) {
     #primary { width:100%; }
     #secondary { width:100%; margin:0; border:none; }
+}
